--- a/Frontend/bower.json
+++ b/Frontend/bower.json
@@ -17,6 +17,8 @@
   ],
   "dependencies": {
     "angular": "angularjs#^1.5.0",
-    "bootstrap": "^3.3.6"
+    "bootstrap": "^3.3.6",
+    "angular-sanitize": "^1.5.0",
+    "angular-route": "^1.5.0"
   }
 }
