--- a/Frontend/bower.json
+++ b/Frontend/bower.json
@@ -19,6 +19,7 @@
     "angular": "angularjs#^1.5.0",
     "bootstrap": "^3.3.6",
     "angular-sanitize": "^1.5.0",
-    "angular-route": "^1.5.0"
+    "angular-route": "^1.5.0",
+    "moment": "^2.12.0"
   }
 }
