--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,12 +18,16 @@
   "homepage": "https://github.com/ManniManfred/LeagueManager",
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-angular-templatecache": "^1.8.0",
     "gulp-concat": "^2.6.0",
     "gulp-concat-css": "^2.2.0",
     "gulp-cssmin": "^0.1.7",
     "gulp-ng-annotate": "^2.0.0",
     "gulp-preprocess": "^2.0.0",
+    "gulp-print": "^2.0.1",
+    "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.5.3"
+    "gulp-uglify": "^1.5.3",
+    "yargs": "^4.6.0"
   }
 }
