--- a/LeagueManager/.vscode/launch.json
+++ b/LeagueManager/.vscode/launch.json
@@ -3,7 +3,14 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": [
+    "configurations": [{
+        "name": "Launch localhost with sourcemaps",
+        "type": "chrome",
+        "request": "launch",
+        "url": "http://localhost:4200",
+        "sourceMaps": true,
+        "webRoot": "${workspaceRoot}"
+        },
         {
             "type": "node",
             "request": "launch",
